# xshell

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: npm-publish.yml  release.yml
npm/: README.md  package.json
npm/scripts/: install.js  uninstall.js  update.js
src/: App.css  App.tsx  agents.tsx  installCommand.ts  layout.ts  markdown.tsx  shells.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgentPickerDialog.tsx  AntigravityIcon.tsx  ClaudeChatIcon.tsx  CodeCopy.tsx  ColorPicker.tsx  CursorIcon.tsx  DetailedSessionInfoWizard.tsx  FileExplorerPanel.tsx  FolderEditorDialog.tsx  GroupView.tsx  HomeView.tsx  HostDialog.tsx  HostPanel.tsx  MarkdownDialog.tsx  OpenAIIcon.tsx  OpencodeIcon.tsx  ProjectEditorDialog.tsx  ProjectPicker.tsx  QuickActionsDialog.tsx  RateLimitIndicator.tsx  SettingsView.tsx  ShellIcon.tsx  Sidebar.tsx  SkillsPanel.tsx  TabBar.tsx  TerminalTab.tsx  Tooltip.tsx  UpdateDialog.tsx  UsageStrip.tsx
src/hooks/: useDragReorder.ts  useInstaller.ts  useProjectImage.ts  useUpdateCheck.ts
src/lib/: fileIcons.ts  fonts.ts
