[package]
name = "xshell"
version = "1.0.2"
edition = "2021"

[lib]
name = "xshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }

# Dev profile: fast incremental rebuilds, light optimization for deps
[profile.dev]
incremental = true
opt-level = 0
debug = true

# Slight optimization for dependencies (faster linking, smaller artifacts)
# without losing debug info in our own code
[profile.dev.package."*"]
opt-level = 1
debug = false

# Release profile: optimize for size + strip debug symbols.
# Tauri release builds produced ~1.5 GB of intermediate artifacts; these
# settings reduce disk usage significantly and also shrink the final binary.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
