[package]
name = "xshell"
version = "1.5.0"
edition = "2021"

[lib]
name = "xshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
# Cursor stores chat history in per-chat SQLite (store.db, WAL mode) — bundled so we don't
# depend on a system libsqlite. md5: Cursor keys chat folders by md5 of the workspace cwd.
rusqlite = { version = "0.31", features = ["bundled"] }
md5 = "0.7"
# Phone remote: an in-process HTTP/WebSocket server streams the live terminal tabs to a
# browser (xterm.js) so a session can be controlled from a phone on the LAN. axum carries
# the WS, tokio runs it on a dedicated runtime thread (kept off Tauri's own runtime),
# futures-util gives the split/sink/stream combinators the WS pump uses, qrcode renders
# the join URL as an SVG for the host dialog.
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "macros"] }
futures-util = "0.3"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[dev-dependencies]
# WS client for the phone-remote protocol tests (PIN gate, tabs push, attach handshake).
tokio-tungstenite = "0.23"

# Dev profile: fast incremental rebuilds, light optimization for deps
[profile.dev]
incremental = true
opt-level = 0
debug = true

# Slight optimization for dependencies (faster linking, smaller artifacts)
# without losing debug info in our own code
[profile.dev.package."*"]
opt-level = 1
debug = false

# Release profile: optimize for size + strip debug symbols.
# Tauri release builds produced ~1.5 GB of intermediate artifacts; these
# settings reduce disk usage significantly and also shrink the final binary.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
